<?xml version="1.0"?>
<package format="2">
  <name>path_follower_ros</name>
  <version>0.0.0</version>
  <description>The package for running Path Follower in ROS</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="dwirya@student.unimelb.edu.au">Dennis Wirya</maintainer>

  <license>MIT</license>

  <author email="dwirya@student.unimelb.edu.au">Dennis Wirya</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend> mur_common </build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>mur_common</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
